auto add retweet/subscribe CTAs to blog posts

--- a/website/articles/useSyncExternalStore-the-underrated-react-api/index.mdx
+++ b/website/articles/useSyncExternalStore-the-underrated-react-api/index.mdx
@@ -3,6 +3,7 @@ slug: useSyncExternalStore-the-underrated-react-api
 title: useSyncExternalStore - The underrated React API
 authors: [slorber]
 date: 2022-09-06
+twitterThreadUrl: "https://slo.im/t/articles/useSyncExternalStore"
 ---
 
 # useSyncExternalStore - The underrated React API
@@ -236,5 +237,3 @@ If a React component only handles `large` screens differently, you can create an
 I hope this article convinced you to take a second look at `useSyncExternalStore()`. I feelthis hook is currently underused in the React ecosystem, and deserves a bit more attention. There are many external data sources that you can subscribe to.
 
 If you still haven't upgraded to React 18, there's a npm [use-sync-external-store](https://www.npmjs.com/package/use-sync-external-store) shim that you can already use today in older versions. There is also a `use-sync-external-store/with-selector` export in case you need to return a memoized non-primitive value.
-
-<SubscribeFormEmbed />
