--- a/website/i18n/fr/docusaurus-plugin-content-blog-articles/useSyncExternalStore-the-underrated-react-api/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-articles/useSyncExternalStore-the-underrated-react-api/index.mdx
@@ -3,6 +3,7 @@ slug: useSyncExternalStore-the-underrated-react-api
 title: useSyncExternalStore - L'API React sous-estimée
 authors: [slorber]
 date: 2022-09-06
+twitterThreadUrl: "https://slo.im/t/articles/useSyncExternalStore"
 ---
 
 # useSyncExternalStore - L'API React sous-estimée
@@ -225,6 +226,4 @@ Si un composant React ne traite que les écrans `large` de manière différente,
 
 J'espère que cet article t'as convaincu de jeter un coup œil à `useSyncExternalStore()`. Je trouve que ce hook est actuellement sous-utilisé dans l'écosystème React, et mérite un peu plus d'attention. Il existe de nombreuses sources de données externes auxquelles on peut s'abonner.
 
-Si tu n'as pas encore mis à jour ton app vers React 18, il y a un shim npm [use-sync-external-store](https://www.npmjs.com/package/use-sync-external-store) que tu peix déjà utiliser aujourd'hui dans tes applications. Il existe également un export `use-sync-external-store/with-selector` au cas où tu as besoin de retourner une valeur non primitive mémoisée.
-
-<SubscribeFormEmbed />
+Si tu n'as pas encore mis à jour ton app vers React 18, il y a un shim npm [use-sync-external-store](https://www.npmjs.com/package/use-sync-external-store) que tu peux déjà utiliser aujourd'hui dans tes applications. Il existe également un export `use-sync-external-store/with-selector` au cas où tu as besoin de retourner une valeur non primitive mémoisée.
