add social card

--- a/website/i18n/fr/docusaurus-plugin-content-blog-articles/useSyncExternalStore-the-underrated-react-api/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-articles/useSyncExternalStore-the-underrated-react-api/index.mdx
@@ -4,6 +4,7 @@ title: useSyncExternalStore - L'API React sous-estimée
 authors: [slorber]
 date: 2022-09-06
 twitterThreadUrl: "https://slo.im/t/articles/useSyncExternalStore"
+image: ./social-card.png
 ---
 
 # useSyncExternalStore - L'API React sous-estimée
@@ -13,6 +14,8 @@ Tu as peut-être entendu parler de [`useSyncExternalStore()`](https://reactjs.or
 Mais pourquoi pas utiliser `useSyncExternalStore()` dans ton propre code?
 
 Dans cet article interactif, je souhaite te présenter un problème : **les hooks React qui retournent trop et déclenchant des re-renders inutiles**. On va aussi voir comment `useSyncExternalStore()` peut être une bonne solution.
+
+![social card](./social-card.png)
 
 <!-- truncate -->
 
