--- a/website/articles/useSyncExternalStore-the-underrated-react-api/index.mdx
+++ b/website/articles/useSyncExternalStore-the-underrated-react-api/index.mdx
@@ -4,6 +4,7 @@ title: useSyncExternalStore - The underrated React API
 authors: [slorber]
 date: 2022-09-06
 twitterThreadUrl: "https://slo.im/t/articles/useSyncExternalStore"
+image: ./social-card.png
 ---
 
 # useSyncExternalStore - The underrated React API
@@ -13,6 +14,8 @@ You might have heard of [`useSyncExternalStore()`](https://reactjs.org/docs/hook
 But what about using `useSyncExternalStore()` in your own application code?
 
 In this interactive article, I want to present you a problem: **over-returning React hooks triggering useless re-renders**. We will see how `useSyncExternalStore()` can be a good fix.
+
+![social card](./social-card.png)
 
 <!-- truncate -->
 
@@ -234,6 +237,6 @@ If a React component only handles `large` screens differently, you can create an
 
 ## Conclusion
 
-I hope this article convinced you to take a second look at `useSyncExternalStore()`. I feelthis hook is currently underused in the React ecosystem, and deserves a bit more attention. There are many external data sources that you can subscribe to.
+I hope this article convinced you to take a second look at `useSyncExternalStore()`. I feel this hook is currently underused in the React ecosystem, and deserves a bit more attention. There are many external data sources that you can subscribe to.
 
 If you still haven't upgraded to React 18, there's a npm [use-sync-external-store](https://www.npmjs.com/package/use-sync-external-store) shim that you can already use today in older versions. There is also a `use-sync-external-store/with-selector` export in case you need to return a memoized non-primitive value.
