add link to RR v6 solution

--- a/website/articles/useSyncExternalStore-the-underrated-react-api/index.mdx
+++ b/website/articles/useSyncExternalStore-the-underrated-react-api/index.mdx
@@ -140,7 +140,7 @@ React-Router expose everything we need to wire `useSyncExternalStore`:
 
 :::caution
 
-This website uses React-Router v5: the solution will be different for React-Router v6.
+This website uses React-Router v5: the [solution](https://twitter.com/Zh0uzi/status/1567523679604539405) will be different for React-Router v6 ([see](https://twitter.com/Zh0uzi/status/1567523679604539405)).
 
 :::
 
