--- a/website/i18n/fr/docusaurus-plugin-content-blog-articles/useSyncExternalStore-the-underrated-react-api/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-articles/useSyncExternalStore-the-underrated-react-api/index.mdx
@@ -140,7 +140,7 @@ React-Router expose tout ce dont on a besoin pour utiliser `useSyncExternalStore
 
 :::caution
 
-Ce site web utilise React-Router v5 : la solution sera différente pour React-Router v6.
+Ce site web utilise React-Router v5 : la solution sera différente pour React-Router v6 ([voir](https://twitter.com/Zh0uzi/status/1567523679604539405)).
 
 :::
 
