update some legacy links

--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/109-and-previous.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/109-and-previous.mdx
@@ -8,12 +8,11 @@ image: /img/TWIR_POST.png
 
 Les anciennes éditions de cette newsletter sont archivées:
 
-- [🇫🇷 Revue archive of Sébastien Lorber](https://www.getrevue.co/profile/sebastien-lorber): depuis l'édition #1
-- [🇬🇧 Revue archive of This Week In React](https://www.getrevue.co/profile/thisweekinreact): depuis l'édition #73
+- [🇫🇷 Revue archive de React Hebdo](https://thisweekinreact.com/fr/archive): depuis l'édition #1
+- [🇬🇧 Revue archive de This Week In React](https://thisweekinreact.com/archive): depuis l'édition #73
 
 :::note
 
 La version anglaise de cette newsletter a démarré après la version française.
 
 :::
-
