--- a/website/newsletter/109-and-previous.mdx
+++ b/website/newsletter/109-and-previous.mdx
@@ -7,12 +7,12 @@ image: /img/TWIR_POST.png
 ---
 
 Older issues of this newsletter are available on:
-- [🇫🇷 Revue archive of Sébastien Lorber](https://www.getrevue.co/profile/sebastien-lorber): from issue #1
-- [🇬🇧 Revue archive of This Week In React](https://www.getrevue.co/profile/thisweekinreact): from issue #73
+
+- [🇫🇷 Revue archive of React Hebdo](https://thisweekinreact.com/fr/archive): from issue #1
+- [🇬🇧 Revue archive of This Week In React](https://thisweekinreact.com/archive): from issue #73
 
 :::note
 
 The English version of this newsletter was started after the French version.
 
 :::
-
