--- a/website/newsletter/116.mdx
+++ b/website/newsletter/116.mdx
@@ -6,13 +6,15 @@ date: 09-09-2022
 image: /img/TWIR_POST.png
 ---
 
+This Week In React #115:
+
 ![](/img/TWIR_POST.png)
 
 <!-- truncate -->
 
-Salut à tous!
+Hey everyone!
 
-<!-- TODO -->
+The new [ThisWeekInReact.com](https://thisweekinreact.com/) website is now online, and the first newsletter issue
 
 🙏 **Support the newsletter:**
 
@@ -39,7 +41,7 @@ Salut à tous!
 
 ---
 
-## Autre
+## Other
 
 **Extras:**
 
