--- a/website/newsletter/_template.mdx
+++ b/website/newsletter/_template.mdx
@@ -1,12 +1,10 @@
 ---
-slug: 115
-title: "#115: Astro, Radix, Remix, Next.js, MDX, Storybook, Expo 46, Skia, TanStack, TC39, Docusaurus..."
+slug: 116
+title: "📨 #116: TODO"
 authors: [slorber]
-date: 08-05-2022
+date: 09-09-2022
 image: /img/TWIR_POST.png
 ---
-
-This Week In React #115: Astro, Radix, Remix, Next.js, MDX, Storybook, Expo 46, Skia, TanStack, TC39, Docusaurus...
 
 ![](/img/TWIR_POST.png)
 
@@ -14,14 +12,14 @@ This Week In React #115: Astro, Radix, Remix, Next.js, MDX, Storybook, Expo 46, 
 
 Hi everyone!
 
-🙏 **Support the newsletter:**
+<!-- TODO -->
 
--   😘 **Recommend it to your friends**: it really helps!
--   💸 [**Sponsor This Week In React**](https://gist.github.com/slorber/cb732fb5d0a002c4d73236a9baeba7bb?utm_campaign=thisweekinreact&utm_medium=email&utm_source=Revue%20newsletter)
--   😍 [**Write testimonials on Twitter**](https://twitter.com/sebastienlorber/timelines/1448942785814466561?utm_campaign=thisweekinreact&utm_medium=email&utm_source=Revue%20newsletter)
--   🧵 [**Retweet the latest Twitter thread**](https://slo.im/thread?utm_campaign=thisweekinreact&utm_medium=email&utm_source=Revue%20newsletter)
--   📨 Reply to this [**email**](mailto:lorber.sebastien@gmail.com?utm_campaign=thisweekinreact&utm_medium=email&utm_source=Revue%20newsletter): feedback is welcome
--   👥 Follow on [**LinkedIn**](https://www.linkedin.com/company/this-week-in-react/?utm_campaign=This%20Week%20In%20React&utm_medium=email&utm_source=Revue%20newsletter)
+🙏 **Support the newsletter:**
+
+- 😘 **Recommend it to your friends**: it really helps!
+- 💸 [**Sponsor This Week In React**](https://thisweekinreact.com/sponsor)
+- 🧵 [**Retweet the latest Twitter thread**](https://slo.im/thread)
+- 📨 Reply to this [**email**](mailto:sebastien@thisweekinreact.com): feedback is welcome
 
 ---
 
@@ -39,8 +37,12 @@ Hi everyone!
 
 **Extras:**
 
-
 ---
 
 ## Other
 
+**Extras:**
+
+---
+
+Meme
