sidebar title fr

--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/options.json
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/options.json
@@ -1,6 +1,6 @@
 {
   "sidebar.title": {
-    "message": "Liste des éditions",
+    "message": "Éditions",
     "description": "The label for the left sidebar"
   }
 }
