--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/116.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/116.mdx
@@ -21,6 +21,8 @@ Salut à tous !
 - 🧵 [**Retweet the latest Twitter thread**](https://slo.im/thread)
 - 📨 Reply to this [**email**](mailto:sebastien@thisweekinreact.com): feedback is welcome
 
+<SubscribeFormEmbed />
+
 ---
 
 ## React
@@ -35,7 +37,11 @@ Salut à tous !
 
 ## React-Native
 
+[**Announcing React Native 0.70**](https://reactnative.dev/blog/2022/09/05/version-070):
+
 **Extras:**
+
+<SubscribeFormEmbed />
 
 ---
 
