--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/_template.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/_template.mdx
@@ -21,6 +21,8 @@ Salut à tous !
 - 🧵 [**Retweet the latest Twitter thread**](https://slo.im/thread)
 - 📨 Reply to this [**email**](mailto:sebastien@thisweekinreact.com): feedback is welcome
 
+<SubscribeFormEmbed />
+
 ---
 
 ## React
@@ -37,6 +39,8 @@ Salut à tous !
 
 **Extras:**
 
+<SubscribeFormEmbed />
+
 ---
 
 ## Autre
@@ -44,5 +48,7 @@ Salut à tous !
 **Extras:**
 
 ---
+
+<SubscribeFormEmbed />
 
 Meme
