add storyblok sponsor

--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/116.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/116.mdx
@@ -25,13 +25,33 @@ Salut à tous !
 
 ---
 
+## 💸 Sponsor
+
+[![Storyblok](/emails/issues/116/storyblok.png)](https://www.storyblok.com/?utm_source=thisweekinreact&utm_medium=display&utm_campaign=AWA_SPON_TWIREACT_TRA&utm_content=thisweekinreact_fr)
+
+Avez-vous déjà essayé [Storyblok](https://www.storyblok.com/?utm_source=thisweekinreact&utm_medium=display&utm_campaign=AWA_SPON_TWIREACT_TRA&utm_content=thisweekinreact_fr) ? C'est le CMS headless avec un éditeur visuel conçu pour les développeurs et les spécialistes du marketing !
+
+Utilisez Storyblok React SDK pour construire rapidement des composants réutilisables et récupérer le contenu pour créer vos applications, sites Web ou eCommerces React, Next.js, Remix, ou même React-Native.
+
+Consultez le [Hub Technologique](https://www.storyblok.com/technologies?utm_source=thisweekinreact&utm_medium=display&utm_campaign=AWA_SPON_TWIREACT_TRA&utm_content=thisweekinreact_fr) et découvrez-le vous-même !
+
 ## React
+
+[**Why Storybook in 2022?**](https://storybook.js.org/blog/why-storybook-in-2022/)
+
+- [7.0 design alpha](https://storybook.js.org/blog/7-0-design-alpha/)
+- [Writing stories in TypeScript](https://storybook.js.org/blog/writing-stories-in-typescript/)
 
 **Extras:**
 
+- [Next.js Conf 2022](https://vercel.com/blog/nextjs-conf-2022)
+- [Redwood v3.0.0 RC](https://community.redwoodjs.com/t/redwood-v3-0-0-rc-is-now-available/3836)
+- [Mailing](https://www.mailing.run/)
+- [Creating F1 graphics in JavaScript](https://www.youtube.com/watch?v=sA-X0Bw_7Gg)
+
 ---
 
-## 💸 Sponsors
+## 💸 Sponsor
 
 ---
 
@@ -41,6 +61,8 @@ Salut à tous !
 
 **Extras:**
 
+- [React-Native EU 2022](https://www.youtube.com/playlist?list=PLZ3MwD-soTTE-qcA0MrcvZBdmkHJSIjJX)
+
 <SubscribeFormEmbed />
 
 ---
@@ -48,6 +70,11 @@ Salut à tous !
 ## Autre
 
 **Extras:**
+
+- [EpicWebDev](https://www.epicweb.dev/)
+- [New to the web platform in August](https://web.dev/web-platform-08-2022/)
+- [Why is CrUX data different from my RUM data?](https://web.dev/crux-and-rum-differences/)
+- [Critical CSS? Not So Fast!](https://csswizardry.com/2022/09/critical-css-not-so-fast/)
 
 ---
 
