--- a/website/newsletter/116.mdx
+++ b/website/newsletter/116.mdx
@@ -27,13 +27,25 @@ The new [ThisWeekInReact.com](https://thisweekinreact.com/) website is now onlin
 
 ---
 
+## 💸 Sponsor
+
+[![Storyblok](/emails/issues/116/storyblok.png)](https://www.storyblok.com/?utm_source=thisweekinreact&utm_medium=display&utm_campaign=AWA_SPON_TWIREACT_TRA&utm_content=thisweekinreact_en)
+
+Have you already tried [Storyblok](https://www.storyblok.com/?utm_source=thisweekinreact&utm_medium=display&utm_campaign=AWA_SPON_TWIREACT_TRA&utm_content=thisweekinreact_en)? It's the headless CMS with a Visual Editor designed for both developers and marketers!
+
+Use Storyblok React SDK to quickly build reusable components and fetch the content to create your React, Next.js, Remix, or even React-Native applications, websites or eCommerces.
+
+Check out [Technology Hub](https://www.storyblok.com/technologies?utm_source=thisweekinreact&utm_medium=display&utm_campaign=AWA_SPON_TWIREACT_TRA&utm_content=thisweekinreact_en) and find it out yourself!
+
+---
+
 ## React
 
 **Extras:**
 
 ---
 
-## 💸 Sponsors
+## 💸 Sponsor
 
 ---
 
