--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/_template.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/_template.mdx
@@ -6,20 +6,19 @@ date: 09-09-2022
 image: /img/TWIR_POST.png
 ---
 
-![](/img/TWIR_POST.png)
+Salut à tous !
+
+<!-- intro TODO -->
 
 <!-- truncate -->
 
-Salut à tous !
+🙏 **Pour me soutenir:**
 
-<!-- TODO -->
-
-🙏 **Support the newsletter:**
-
-- 😘 **Recommend it to your friends**: it really helps!
-- 💸 [**Sponsor This Week In React**](https://thisweekinreact.com/sponsor)
-- 🧵 [**Retweet the latest Twitter thread**](https://slo.im/thread)
-- 📨 Reply to this [**email**](mailto:sebastien@thisweekinreact.com): feedback is welcome
+- 😘 **Recommande la newsletter** ! Ça m'aide vraiment beaucoup !
+- 💸 [**Sponsorise la newsletter**](https://thisweekinreact.com/fr/sponsor) ou [**sponsorise-moi**](https://github.com/sponsors/slorber)
+- 🧵 [**Retweet le dernier thread Twitter**](https://slo.im/thread)
+- 📨 Réponds à cet [**email**](mailto:sebastien@thisweekinreact.com): merci pour vos nombreux retours
+- 💬 Rejoins le [**chat Discord**](https://thisweekinreact/discord)
 
 <SubscribeFormEmbed />
 
@@ -44,6 +43,12 @@ Salut à tous !
 **Extras:**
 
 <SubscribeFormEmbed />
+
+---
+
+## Jobs
+
+💡 [Comment publier ton offre d'emploi ?](https://thisweekinreact.com/fr/sponsor)
 
 ---
 
