--- a/website/newsletter/116.mdx
+++ b/website/newsletter/116.mdx
@@ -6,20 +6,16 @@ date: 09-09-2022
 image: /img/TWIR_POST.png
 ---
 
-This Week In React #115:
+Hi everyone!
 
-![](/img/TWIR_POST.png)
+<!-- intro TODO -->
 
 <!-- truncate -->
-
-Hey everyone!
-
-The new [ThisWeekInReact.com](https://thisweekinreact.com/) website is now online, and the first newsletter issue
 
 🙏 **Support the newsletter:**
 
 - 😘 **Recommend it to your friends**: it really helps!
-- 💸 [**Sponsor This Week In React**](https://thisweekinreact.com/sponsor)
+- 💸 [**Sponsor the newsletter**](https://thisweekinreact.com/sponsor) or [**sponsor me**](https://github.com/sponsors/slorber)
 - 🧵 [**Retweet the latest Twitter thread**](https://slo.im/thread)
 - 📨 Reply to this [**email**](mailto:sebastien@thisweekinreact.com): feedback is welcome
 
@@ -57,10 +53,16 @@ Check out [Technology Hub](https://www.storyblok.com/technologies?utm_source=thi
 
 ---
 
+## Jobs
+
+💡 [How to publish your job offer ?](https://thisweekinreact.com/sponsor)
+
+---
+
 ## Other
 
 **Extras:**
 
 ---
 
-Meme
+<!-- meme TODO -->
