--- a/website/newsletter/_template.mdx
+++ b/website/newsletter/_template.mdx
@@ -6,18 +6,16 @@ date: 09-09-2022
 image: /img/TWIR_POST.png
 ---
 
-![](/img/TWIR_POST.png)
-
-<!-- truncate -->
-
 Hi everyone!
 
-<!-- TODO -->
+<!-- intro TODO -->
+
+<!-- truncate -->
 
 🙏 **Support the newsletter:**
 
 - 😘 **Recommend it to your friends**: it really helps!
-- 💸 [**Sponsor This Week In React**](https://thisweekinreact.com/sponsor)
+- 💸 [**Sponsor the newsletter**](https://thisweekinreact.com/sponsor) or [**sponsor me**](https://github.com/sponsors/slorber)
 - 🧵 [**Retweet the latest Twitter thread**](https://slo.im/thread)
 - 📨 Reply to this [**email**](mailto:sebastien@thisweekinreact.com): feedback is welcome
 
@@ -47,10 +45,16 @@ Hi everyone!
 
 ---
 
+## Jobs
+
+💡 [How to publish your job offer ?](https://thisweekinreact.com/sponsor)
+
+---
+
 ## Other
 
 **Extras:**
 
 ---
 
-Meme
+<!-- meme TODO -->
