add all sponsors

--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/116.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/116.mdx
@@ -12,7 +12,7 @@ Salut à tous !
 
 <!-- truncate -->
 
-🙏 **Pour me soutenir:**
+Pour me soutenir:
 
 - 😘 **Recommande la newsletter** ! Ça m'aide vraiment beaucoup !
 - 💸 [**Sponsorise la newsletter**](https://thisweekinreact.com/fr/sponsor) ou [**sponsorise-moi**](https://github.com/sponsors/slorber)
@@ -48,9 +48,13 @@ Consultez le [Hub Technologique](https://www.storyblok.com/technologies?utm_sour
 - [Mailing](https://www.mailing.run/)
 - [Creating F1 graphics in JavaScript](https://www.youtube.com/watch?v=sA-X0Bw_7Gg)
 
----
-
 ## 💸 Sponsor
+
+[**Cambly: la solution pour maîtriser l'anglais IRL**](https://www.cambly.com/)
+
+Cambly, c'est la plateforme pour progresser à l'oral en anglais avec des tuteurs anglophones, quand et où vous voulez. Maîtriser le vocabulaire technique, interagir avec vos collègues ou clients à l'international ou travailler depuis n'importe où dans le monde, nos tuteurs s'adaptent à vos besoins, votre niveau et vos objectifs.
+
+[Faites un cours d'essai gratuit de 15 minutes et profitez de 50% de réduction sur votre abonnement](https://cambly.info/reacthebdo1)
 
 ---
 
@@ -67,6 +71,21 @@ Consultez le [Hub Technologique](https://www.storyblok.com/technologies?utm_sour
 ---
 
 ## Jobs
+
+🧑‍💻 [**Matters - Développeur Web sénior (React/Node)**](https://bit.ly/NLReactH)
+
+Rejoins notre product et startup studio pour nous aider à transformer des idées d’entrepreneurs en des business qui marchent grâce à des produits digitaux utiles et pragmatiques. Paris, remote flexible, 50K€-65K€.
+
+🧑‍💻 [**Linxea - Lead Dev React.js - 60-75k€**](https://www.welcometothejungle.com/fr/companies/linxea/jobs/lead-dev-react_paris)
+
+Plateforme leader de l’épargne en ligne.
+Stack tech : ReactJS, Redux, Saga, Formik, Storybook, Webpack, Typescript.
+Skills : architecture, développement, pratiques craft (clean architecture, clean code ,TDD), mentoring et formation des équipes.
+Paris 75008 - 2j de TT/sem.
+
+🧑‍💻 [**G2i - 100% Remote JavaScript Jobs**](https://www.g2i.co/)
+
+The only hiring platform that puts developer health first. We connect React and React Native freelancers with great companies committed to improving developers' mental, physical, and emotional health and well-being.
 
 💡 [Comment publier ton offre d'emploi ?](https://thisweekinreact.com/fr/sponsor)
 
