--- a/website/newsletter/116.mdx
+++ b/website/newsletter/116.mdx
@@ -12,7 +12,7 @@ Hi everyone!
 
 <!-- truncate -->
 
-🙏 **Support the newsletter:**
+To support me:
 
 - 😘 **Recommend it to your friends**: it really helps!
 - 💸 [**Sponsor the newsletter**](https://thisweekinreact.com/sponsor) or [**sponsor me**](https://github.com/sponsors/slorber)
@@ -55,7 +55,11 @@ Check out [Technology Hub](https://www.storyblok.com/technologies?utm_source=thi
 
 ## Jobs
 
-💡 [How to publish your job offer ?](https://thisweekinreact.com/sponsor)
+🧑‍💻 [**G2i - 100% Remote JavaScript Jobs**](https://www.g2i.co/)
+
+The only hiring platform that puts developer health first. We connect React and React Native freelancers with great companies committed to improving developers' mental, physical, and emotional health and well-being.
+
+💡 [How to publish an offer ?](https://thisweekinreact.com/sponsor)
 
 ---
 
