--- a/website/newsletter/_template.mdx
+++ b/website/newsletter/_template.mdx
@@ -12,7 +12,7 @@ Hi everyone!
 
 <!-- truncate -->
 
-🙏 **Support the newsletter:**
+To support me:
 
 - 😘 **Recommend it to your friends**: it really helps!
 - 💸 [**Sponsor the newsletter**](https://thisweekinreact.com/sponsor) or [**sponsor me**](https://github.com/sponsors/slorber)
