--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/116.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/116.mdx
@@ -34,7 +34,13 @@ Utilisez Storyblok React SDK pour construire rapidement des composants réutilis
 
 Consultez le [Hub Technologique](https://www.storyblok.com/technologies?utm_source=thisweekinreact&utm_medium=display&utm_campaign=AWA_SPON_TWIREACT_TRA&utm_content=thisweekinreact_fr) et découvrez-le vous-même !
 
-## React
+## ⚛️ React
+
+[**Astro 1.0**](https://astro.build/blog/astro-1/)
+
+[**PureComponents vs Functional Components with hooks**](https://www.developerway.com/posts/pure-components-vs-functional-and-hooks)
+
+[**Preact Signals**](https://preactjs.com/blog/introducing-signals/)
 
 [**Why Storybook in 2022?**](https://storybook.js.org/blog/why-storybook-in-2022/)
 
@@ -58,7 +64,7 @@ Cambly, c'est la plateforme pour progresser à l'oral en anglais avec des tuteur
 
 ---
 
-## React-Native
+## 📱 React-Native
 
 [**Announcing React Native 0.70**](https://reactnative.dev/blog/2022/09/05/version-070):
 
@@ -70,20 +76,28 @@ Cambly, c'est la plateforme pour progresser à l'oral en anglais avec des tuteur
 
 ---
 
-## Jobs
+## 🇫🇷 En français
 
-🧑‍💻 [**Matters - Développeur Web sénior (React/Node)**](https://bit.ly/NLReactH)
+- [Créer un package avec TSDX](https://www.premieroctet.com/blog/creer-un-package-avec-tsdx)
+- [Améliorer les performances de Native-Base](https://www.premieroctet.com/blog/performances-native-base)
+- [Création d'une application e-commerce avec Remix](https://www.premieroctet.com/blog/remix-ecommerce)
+
+---
+
+## 🧑‍💻 Jobs
+
+🧑‍💼 [**Matters - Développeur Web sénior (React/Node)**](https://bit.ly/NLReactH)
 
 Rejoins notre product et startup studio pour nous aider à transformer des idées d’entrepreneurs en des business qui marchent grâce à des produits digitaux utiles et pragmatiques. Paris, remote flexible, 50K€-65K€.
 
-🧑‍💻 [**Linxea - Lead Dev React.js - 60-75k€**](https://www.welcometothejungle.com/fr/companies/linxea/jobs/lead-dev-react_paris)
+🧑‍💼 [**Linxea - Lead Dev React.js - 60-75k€**](https://www.welcometothejungle.com/fr/companies/linxea/jobs/lead-dev-react_paris)
 
 Plateforme leader de l’épargne en ligne.
 Stack tech : ReactJS, Redux, Saga, Formik, Storybook, Webpack, Typescript.
 Skills : architecture, développement, pratiques craft (clean architecture, clean code ,TDD), mentoring et formation des équipes.
 Paris 75008 - 2j de TT/sem.
 
-🧑‍💻 [**G2i - 100% Remote JavaScript Jobs**](https://www.g2i.co/)
+🧑‍💼 [**G2i - 100% Remote JavaScript Jobs**](https://www.g2i.co/)
 
 The only hiring platform that puts developer health first. We connect React and React Native freelancers with great companies committed to improving developers' mental, physical, and emotional health and well-being.
 
@@ -91,7 +105,7 @@ The only hiring platform that puts developer health first. We connect React and 
 
 ---
 
-## Autre
+## 🔀 Autre
 
 **Extras:**
 
